@@ -4,6 +4,7 @@ Version 5.0.1
 - Allow use of constants from other objects in inline assembly
 - Convert "ret" in inline assembly to a jump to the end of it
 - Fixed a C parser crash
+- Removed support for Rev A silicon (it was not working anyway)
 
 Version 5.0.0
 - Renamed "fastspin" to "flexspin"
